--- a/random-generator/style.css
+++ b/random-generator/style.css
@@ -8,7 +8,7 @@ html {
   font-family: "Montserrat", sans-serif;
 }
 body {
-  background-color: rgb(37, 38, 39);
+  background-color: #254336;
   color: wheat;
 }
 section {
@@ -23,7 +23,7 @@ section {
   width: 90%;
   max-width: 500px;
   margin: 0 auto;
-  background-color: rgb(51, 55, 59);
+  background-color: #6b8a7a;
   border-radius: 8px;
   padding: 3rem;
   display: flex;
@@ -40,9 +40,10 @@ button {
   width: fit-content;
   padding: 2rem;
   font-size: 2rem;
-  background-color: rgb(25, 28, 29);
-  color: white;
+  background-color: #b7b597;
+  color: #dad3be;
   border-radius: 4px;
+  border-color: #dad3be;
   cursor: pointer;
   align-self: flex-end;
 }
