--- a/random-generator/style.css
+++ b/random-generator/style.css
@@ -41,7 +41,7 @@ button {
   padding: 2rem;
   font-size: 2rem;
   background-color: #b7b597;
-  color: #dad3be;
+  color: #254336;
   border-radius: 4px;
   border-color: #dad3be;
   cursor: pointer;
