--- a/dummy/style.css
+++ b/dummy/style.css
@@ -1,3 +1,221 @@
-.box {
-  background-color: tomato;
+:root {
+  --primary-text-color: rgba(0, 0, 0, 0.8);
+  --title-text-color: #000000;
+  --accent-color: #18a0fb;
+  --primary-bg-color: #ffffff;
+  --secondary-bg-color: #f5f5f5;
+}
+
+body {
+  background-color: #fff;
+  color: var(--primary-text-color);
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: -0.015em;
+  font-size: 18px;
+  line-height: 1.67;
+}
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  margin: auto;
+  width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  outline: 2px solid tomato;
+}
+
+.logo {
+  color: var(--title-text-color);
+  font-size: 28px;
+  line-height: 1.14;
+  font-size: 28px;
+  text-decoration: none;
+}
+.logo:hover {
+  color: var(--accent-color);
+}
+
+/* Page Hedaer */
+.page-header {
+}
+
+/* Main Nav */
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+/* Site nav */
+
+.site-nav {
+  display: flex;
+  margin-left: 70px;
+}
+
+.site-nav .item {
+  border: 1px solid tomato;
+  margin-right: 40px;
+}
+.site-nav .item:last-child {
+  margin-right: 0;
+}
+
+/*.site-nav .item:not(:last-child){
+  margin-right: 40px
+}*/
+/*.site-nav .item + .item {
+  margin-left: 40px;применяется всем кроме первого (тут нет соседа слева для марджина)
+}*/
+
+.site-nav .link {
+  display: block;
+  padding-top: 21px;
+  padding-bottom: 21px;
+  color: var(--accent-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.2;
+  text-decoration: none;
+}
+.site-nav .link_hover,
+.site-nav .link_focus {
+  color: var(--title-text-color);
+}
+
+.site-nav .link.current {
+  color: var(--accent-color);
+}
+
+.auth-nav {
+  display: flex;
+  margin-left: auto;
+}
+
+.auth-nav .item + .item {
+  margin-left: 12px;
+}
+
+/* Hero */
+
+.hero {
+  text-align: center;
+}
+.hero-title {
+  margin-top: 0;
+  margin-bottom: 40px;
+  color: var(--title-text-color);
+  font-weight: 400;
+  font-size: 56px;
+  line-height: 1.43;
+  text-align: center;
+}
+
+/* Section */
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.section-title {
+  margin-top: 0;
+  margin-bottom: 60px;
+  color: var(--title-text-color);
+  font-size: 48px;
+  line-height: 1.5;
+  font-weight: 400;
+  text-align: center;
+}
+.section-description {
+  font-size: 36px;
+  line-height: 1.39;
+  margin-top: 0;
+  margin-bottom: 80px;
+}
+
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+/* Feature */
+
+.feature-list .title,
+.work-list .title {
+  margin-top: 0;
+  margin-bottom: 24px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.5;
+}
+.feature-list .link {
+  color: var(--accent-color);
+}
+
+.feature-list p {
+  margin-top: 0;
+  margin-bottom: 32px;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.work-list > .item {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.work-list > .item:nth-child(2n) {
+  background-color: var(--secondary-bg-color);
+}
+
+/* Examples */
+
+.work-list .title,
+.work-list .title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.5;
+}
+
+.button {
+  color: var(--title-text-color);
+  background-color: var(--primary-bg-color);
+  border: 1px solid transparent;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.2;
+  text-decoration: none;
+  border-radius: 6px;
+  padding: 11px 34px;
+  display: inline-block;
+  min-width: 130px;
+  text-align: center;
+}
+
+.primary {
+  background-color: var(--accent-color);
+  color: var(--primary-bg-color);
+}
+.secondary {
+  color: var(--accent-color);
+  background-color: var(--primary-bg-color);
+  border-color: blue;
+  border-color: var(--accent-color);
+}
+
+/* Footer */
+.copyright {
+  font-size: 15px;
+  line-height: 1.6;
+}
+
+.social > .label {
+  font-size: 15px;
+  line-height: 1.6;
 }
